# Raytracer

./: CMakeLists.txt  Readme.md
include/: Ray.hpp  camera.h  hitable.hpp  material.h  plane.hpp  profile.h  sphere.h  texture.h  world.h
include/Math/: Functions.h  Vector.h  constants.hpp  helpers.h
sources/: Ray.cpp  camera.cpp  main.cpp  plane.cpp  sphere.cpp  texture.cpp  world.cpp
